--- a/resources/assets/angular/src/index.html
+++ b/resources/assets/angular/src/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
+  <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
   <title>Timers</title>
 </head>
 <body>
